# pico

./: README.md  example.txt
index2core/: CMakeLists.txt  CntCore.cu  HistoCore.cu  NbrCore.cu
index2core/shared/: Timer.cpp  argument.cpp  globals.h  gpu_error.cuh  graph.cpp  graph.h  virtual_graph.cpp  virtual_graph.h
peel/: CMakeLists.txt  Makefile  gppeel.cu  main.cu  peelone.cu
peel/inc/: common.h  gpu_memory_allocation.h
peel/shared/: Timer.h  argument.cpp  argument.h  graph.cpp  util.cpp  util.h  virtual_graph.cpp  virtual_graph.h
peel/src/: graph.cpp  peel-dyn.cc  peelone-dyn.cc
util/: process_datasets.jl
